@@ -1,3 +1,9 @@
+2015-10-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c,
+	  src/port.h:
+	  Spelling fixes.
+
 2015-10-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/cpp/Makefile.in:
@@ -8,6 +14,11 @@
 	  Support C11 in preprocessor.
 	* src/SDCCmain.c:
 	  Fix standard support, add support for c95 and sdcc11 dialects.
+
+2015-10-22 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* SDCC.y:
+	  Add checks for NULL pointers.
 
 2015-10-19 Ben Shi <powerstudio1st AT 163 DOT com>
 
